--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,8 @@
 </head>
 <body>
 
-<!--  <s-saqhan-component></s-saqhan-component>-->
-<s-saqhan-second-page ></s-saqhan-second-page>
+  <s-saqhan-component></s-saqhan-component>
+<!--<s-saqhan-second-page ></s-saqhan-second-page>-->
 <!--      <s-saqhan-item-news></s-saqhan-item-news>-->
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
